fix: prevent icon cutoff

--- a/ui-components/src/blocks/MediaCard.scss
+++ b/ui-components/src/blocks/MediaCard.scss
@@ -26,6 +26,7 @@
 .media-card__icon-container {
   display: flex;
   justify-content: center;
+  overflow: visible;
 }
 
 .media-card__body {
